Allow NavMenuGroup to specify custom icon content to appear in collapsed Nav Menu (Fixes #467) (#470)
* Add NavigationIconContent to FluentNavMenu (Fixes #463)

* Icon + Expanded icon

* Revert "Icon + Expanded icon"

This reverts commit 81cd63a0d94ab7b85a4e4191ccc71a54a110fff7.

* Show group icon when nav menu is collapsed

* Remove sub-menu item added to sample.

* Cascading parameters don't need to be public??

* Exposure tidying

* Include example

--- a/examples/FluentUI.Demo.Shared/wwwroot/css/site.css
+++ b/examples/FluentUI.Demo.Shared/wwwroot/css/site.css
@@ -343,10 +343,6 @@ code {
         max-width: 100%;
     }
 
-    .navmenu-main-button {
-        display: none;
-    }
-
     .menu-icon {
         padding: 10px 0.75em;
         z-index: 2;
